--- a/1.md
+++ b/1.md
@@ -1,12 +1,16 @@
-‌# Table of contents
+## 생존 코스 1주차
 
-## GitBook
+### 1주차의 목표
 
-* [Git Book 가이드](README.md)
+    1. vsc를 사용해서 마크다운 하는방법에 익숙해지기.
+    2. 주로 독학을 했기에 용어나 이론에 약하기에 좀 더 깊이 공부하기
+    3. 모르는게 있다면 질문하기 (모르는건 부끄러운게 아니다..)
+    4. 개발 환경 세팅에서 좀 더 편한 방법이 있는지 알아보기
+    5. 처음 접해보는 테스트 도구 알아보기
 
-* [GitHub과 연동하기](/integration/integration-with-github.md)
-  * [PR 날리기](/integration/pull-request.md)
-
-## 효과적인 학습법
-
-* [미라클 모닝](miracle-morning.md)
+### 목차
+- 개발 환경 세팅
+- TypeScript
+- React
+- Testing Library
+- Parcel & ESLint
