--- a/1.md
+++ b/1.md
@@ -1,6 +1,6 @@
-## 생존 코스 1주차
+# 생존 코스 1주차
 
-### 1주차의 목표
+## 1주차의 목표
 
     1. vsc를 사용해서 마크다운 하는방법에 익숙해지기.
     2. 주로 독학을 했기에 용어나 이론에 약하기에 좀 더 깊이 공부하기
@@ -9,6 +9,7 @@
     5. 처음 접해보는 테스트 도구 알아보기
 
 ### 목차
+
 - 개발 환경 세팅
 - TypeScript
 - React
